--- a/package.json
+++ b/package.json
@@ -1,13 +1,36 @@
 {
   "name": "discord-notification",
-  "version": "1.3.0",
+  "version": "0.0.1",
   "description": "An abstract implementation to send notification on discord",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "homepage": "https://github.com/penseapp/discord-notification",
+  "bugs": {
+    "url": "https://github.com/penseapp/discord-notification/issues"
+  },
   "scripts": {
-    "test": "jest",
-    "build": "tsc",
-    "deploy": "npm publish"
+    "dev": "nodemon --watch \"src/\" --exec \"ts-node src/index.ts\" -e ts",
+    "test": "jest --detectOpenHandles --forceExit",
+    "test:coverage": "jest --detectOpenHandles --collect-coverage",
+    "format": "prettier --config .prettierrc.json --ignore-unknown --write \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json",
+    "build": "tsc"
+  },
+  "dependencies": {
+    "axios": "^0.19.2",
+    "g": "^2.0.1",
+    "tsc": "^1.20150623.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.18.0",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.1.3"
   },
   "repository": {
     "type": "git",
@@ -17,17 +40,12 @@
     "discord",
     "notification"
   ],
-  "author": "Joao Mantovani",
-  "license": "ISC",
-  "devDependencies": {
-    "typescript": "^2.7.2"
-  },
+  "author": "Joao Mantovani <joao@penseapp.com.br>",
+  "license": "MIT",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@ockpay"
   },
-  "dependencies": {
-    "axios": "^0.19.2",
-    "g": "^2.0.1",
-    "tsc": "^1.20150623.0"
-  }
+  "files": [
+    "dist/**/**"
+  ]
 }
