--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,13 @@
     "lib": ["es2017", "es7", "es6", "dom"],
     "declaration": true,
     "outDir": "dist",
+    "sourceMap": true,
     "strict": true,
     "esModuleInterop": true
   },
   "exclude": [
     "node_modules",
     "dist",
-    "src/teste.ts"
+    // "src/teste.ts"
   ]
 }
