--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "author": "Joao Mantovani <joao@penseapp.com.br>",
   "license": "MIT",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@penseapp"
+    "registry": "https://npm.pkg.github.com"
   },
   "files": [
     "dist/**/**"
