--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "g": "^2.0.1",
-    "tsc": "^1.20150623.0"
+    "tsc": "^1.20150623.0",
+    "user": "^0.0.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
@@ -43,9 +44,6 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.4.2"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
   },
   "files": [
     "dist/**/**"
