--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "g": "^2.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
