chore: upload artifact error file permission

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: coveragev-${{ matrix.node-version }}
-          path: coverage/lcov.info
+          path: ./coverage/lcov.info
 
   coverage:
     needs: test
