--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Easily send notifications to Discord on Node.js",
   "author": "Joao Mantovani <joao@penseapp.com.br>",
   "license": "MIT",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "private": false,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/penseapp/discord-notification.git"
