--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
+    "axios-mock-adapter": "^1.20.0",
     "eslint": "^7.32.0",
     "jest": "^27.3.0",
     "nodemon": "^2.0.12",
