--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "description": "Easily send notifications to Discord on Node.js",
   "author": "Joao Mantovani <joao@penseapp.com.br>",
   "license": "MIT",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
   "private": false,
   "repository": {
     "type": "git",
@@ -31,8 +28,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "axios": "^0.25.0",
-    "g": "^2.0.1"
+    "axios": "^0.25.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
