--- a/tsconfig.json
+++ b/tsconfig.json
@@ -77,5 +77,5 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "include": ["src/**/*", "tests/index.spec.ts"],
-  "exclude": ["node_modules", "**/*.test.ts", "src/server.ts", "src/index.ts"]
+  "exclude": ["node_modules", "**/*.test.ts", "src/server.ts"]
 }
